--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-#The contents of this repository were contributed by;
+#The contents of this repository was contributed by;
 
-Agbegbedia Oghenemaro Jude
-Agava Kole Collins
+Agbegbedia Oghenemaro <marojude471@gmail.com>
+Agava Kole <agavakole@gmail.com>
